TestSuite/Syntax/Errors/ShiftSelections1.tjp
project test "Test" "$Id" 2000-01-01 - 2000-01-31

shift s1 "Shift1" {
  workinghours mon 10:00 - 12:00, 13:00-15:00
  workinghours tue 9:00-14:00
  workinghours wed off
}

resource r1 "Resource1" {
  shift s1 2000-01-01 - 2000-01-10
  shift s2 2000-01-11 - 2000-01-20
}
